@@ -1,0 +1,12 @@
+"""
+cons3rtdefaults.py
+
+A module for default values.
+
+"""
+
+# Default number of CPUs to include when subscripting to a template
+default_template_subscription_max_cpus = 32
+
+# Default number RAM in MBs to include when subscripting to a template
+default_template_subscription_max_ram_mb = 131072
